Bug 472662 - When a widget is in edit mode, the bar with buttons disappears on mouseover
Summary: When a widget is in edit mode, the bar with buttons disappears on mouseover
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Containment (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
: 473842 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-07-26 13:10 UTC by Patrick Silva
Modified: 2023-11-28 17:18 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screen recording (1.00 MB, video/webm)
2023-07-26 13:10 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-07-26 13:10:24 UTC
Created attachment 160537 [details]
screen recording

STEPS TO REPRODUCE
1. have a widget on desktop
2. right-click on desktop and choose "Enter edit mode"
3. hover the widget and try to click on the buttons used to edit or delete it

OBSERVED RESULT
we cannot click on the buttons because the bar with them disappears on mouseover.
Please watch the attached screen recording.

EXPECTED RESULT
the observed result does not occur

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.6.0
Graphics Platform: Wayland
Comment 1 Nate Graham 2023-07-26 20:47:00 UTC
Can reproduce. It's hilarious at first, then very annoying.
Comment 2 Nate Graham 2023-08-01 19:30:14 UTC
Ok, so the problem here is that we have two MouseAreas in ConfigOverlay.qml that are supposed to inhibit exiting Edit Mode when they're hovered, and that's not working in Plasma 6.
Comment 3 Nate Graham 2023-08-01 22:30:29 UTC
Haven't found the thing that causes ConfigOverlay's `open` property to get set to false when it's not hovered, but that seems to be the cause of the issue.
Comment 4 Nate Graham 2023-08-01 23:52:45 UTC
Ooh it's in ItemContainer::childMouseEventFilter
Comment 5 Nate Graham 2023-08-02 04:05:06 UTC
So when the mouse leaves the item container, the close timer starts. In Plasma 5, the two MouseAreas were somehow blocking this, but that doesn't seem to be working in Plasma 6. Frankly I'm struggling to understand how it would have worked in 5. But clearly input handling has changed in Qt 6 sufficiently that whatever made it work in Plasma 5 no longer does in 6.
Comment 6 Patrick Silva 2023-08-28 13:59:54 UTC
*** Bug 473842 has been marked as a duplicate of this bug. ***
Comment 7 Bug Janitor Service 2023-11-27 20:37:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3609
Comment 8 Nate Graham 2023-11-28 17:18:19 UTC
Git commit 4c09f4ea9cbe35d301b7d585879008d1af460030 by Nate Graham, on behalf of Bharadwaj Raju.
Committed on 28/11/2023 at 18:01.
Pushed by ngraham into branch 'master'.

Fix applet edit overlay disappearing on hovering the side buttons in global edit mode

M  +6    -1    components/containmentlayoutmanager/itemcontainer.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/4c09f4ea9cbe35d301b7d585879008d1af460030