Fix applet edit overlay disappearing on hovering the side buttons in global edit mode

BUG: 472662